# pear-desktop

./: .gitignore  .oxfmtrc.json  AGENTS.md  EMRE-FEATURES.md  README.md  electron-builder.yml  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build-after-macos-artifacts.yml  build-after-pear-desktop-artifacts.yml  build-macos.yml  build.yml  dependency-review.yml  main.yml  nix-check.yml  pr-build-artifacts.yml  publish-installers.yml  release-manual.yml  reviewdog.yml
assets/: hover-popup.html
native/: index.d.ts  index.ts
nix/: README.md
nix/homeManagerModule/: default.nix  options.nix
nix/legacyPackages/: eval.nix  nixosOptionsDoc.nix
nix/lib/: default.nix
patches/: @jellybrick__dbus-next.patch
rp-app/: README.md  package.json
rp-app/src/: preload.js
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
rust/src/audio/: biquad.rs  equalizer.rs  mod.rs
scratch/: resize-icon.js
src/: index.ts  menu.ts  music-player.css  pear-desktop.ts  renderer.ts  settings-window.ts  tray.ts  trusted-types-function-shim.ts  window-utils.ts
src/config/: defaults.ts  index.ts  plugins.ts  store.ts
src/loader/: main.ts  menu.ts  preload.ts  renderer.ts
src/plugins/: audio-compressor.ts
src/providers/: share-url.ts  song-controls.ts  song-info-front.ts  song-info.ts
src/ts-declarations/: castv2-client.d.ts
tests/: share-url.test.ts
themes/: macos-vibrancy.css
vite-plugins/: plugin-importer.mts  plugin-loader.mts
(+332 files in other folders)
